[BRANDSR-8908] Fix overlap issue on PLP

--- a/app/design/frontend/Laneige/my/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Laneige/my/Magento_Catalog/web/css/source/_module.less
@@ -932,6 +932,15 @@
         }
     }
 
+    .catalog-category-view {
+        &.page-layout-1column {
+            &.page-with-filter{
+                .page-title-wrapper {
+                    margin-top: 60px;
+                }
+            }
+        }
+    }
     .catalog-product-view {
         .column.main {
             .lib-vendor-prefix-display(flex);
